Adding new design files, updates to unit tests, small changes to js files.

--- a/code/core/static/css/_default.less
+++ b/code/core/static/css/_default.less
@@ -1,13 +1,13 @@
-body {
-	background-color: @white;
-};
+//body {
+	//background-color: @white;
+//};
 //.container {
 	//width: 100%;
 	//.box-sizing;
 //};
-.content {
-	background-color: @white;
-}
+//.content {
+	//background-color: @white;
+//}
 h1, 
 h2,
 .mimic-h2, 
@@ -37,7 +37,7 @@ h3,
 	border:none;
 };
 footer {
-	&.locfoot {
+	&.fdafoot {
 		background-color:@gray;
 		padding:20px;
 		color:@white;
