--- a/code/core/static/css/base/_typography.less
+++ b/code/core/static/css/base/_typography.less
@@ -93,6 +93,16 @@ a {
 /*
  
 ##Message options
+
+```
+<h2 class="mute"><code>mute</code> is used to suppress headings or other html elements to base font style</h2>
+<p class="text-warning"><code>text-warning</code> indicates caution should be taken with this action</p>
+<p class="text-alert"><code>text-alert</code> is for informational alert messages</p>
+<p class="text-error"><code>text-error</code> indicates error or potentially negative action</p>
+<p class="text-info"><code>text-info</code> is for informational alert messages</p>
+<p class="text-success"><code>text-success</code> indicates a successful or positive action</p>
+```
+
 */
 .mute {
   font-size: @base_font_size;
