--- a/code/templates/core/accessibility.html
+++ b/code/templates/core/accessibility.html
@@ -1,19 +1,29 @@
 {% extends "core/base.html" %}
 
 {% load staticfiles %}
-{% block text %}
-    <h1 class="page-title">Accessibility</h1>
+{% block main %}
+<main>
+    <div class="wrapper page-header">
+        <div class="content">
+            <h1>Accessibility</h1>
+        </div>
+    </div>
+    <div class="wrapper body">
+        <div class="content">
+            <div class="TODO">
+                <h2>Access to Our Site</h2>
+                 <p>We believe that our web site is compliant with Section 508 and W3C accessibility design guidelines.
+                Artemis Consulting is making every effort to make its FDA Drug Monitor available to all members of
+                the public.</p>
 
-    <h2>Access to Our Web Site</h2>
-    <p>We believe that our web site is compliant with Section 508 and W3C accessibility design guidelines.
-        Artemis Consulting is making every effort to make its FDA Drug Monitor available to all members of
-        the public.</p>
+                <p>If you are a person with a disability and you have trouble using our web site&ndash;or if you experience
+                    difficulty using any of our services, products, or facilities&ndash;please tell us about the problem.
 
-    <p>If you are a person with a disability and you have trouble using our web site&ndash;or if you experience
-        difficulty using any of our services, products, or facilities&ndash;please tell us about the problem.
-
-    <p>Send us an e-mail message at:
-    <a href="mailto:accessibility-feedback@artemisconsultinginc.com">accessibility-feedback@artemisconsultinginc.com</a>
-    </p>
+                <p>Send us an e-mail message at:
+                <a href="mailto:accessibility-feedback@artemisconsultinginc.com">accessibility-feedback@artemisconsultinginc.com</a>
+                </p>
+            </div>
+        </div><!-- end content -->
+    </div><!-- end wrapper -->
+</main>
 {% endblock %}
-
