--- a/code/templates/core/base.html
+++ b/code/templates/core/base.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load humanize %}
 
-<html lang="en">
+<html class="no-js" lang="en">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +16,7 @@
 
     <!--link href="{% static "js/jquery-ui.css" %}" rel="stylesheet"-->
     <!-- if (development) -->
-    <link href="{% static "css/style.less" %}" type='text/css' rel="stylesheet/less"/>
+    <link href="{% static "css/style-fda.less" %}" type='text/css' rel="stylesheet/less"/>
     <script type="text/javascript">
         less = {
             env: "development",
@@ -37,26 +37,11 @@
       <script src="{% static "js/respond.min.js" %}"></script>
     <![endif]-->
 </head>
-
 <body>
-<div class="container">
-    <header class="fdahead">
-    	<button class="fdahead-nav-toggle"><span>show navigation</span></button>
-		<span class="fdahead-logo"><a href="/"><img title="Official FDA Logo" width="92" height="38" alt="" src="{% static "images/fda-logo.png" %}"> <span>Drug Monitor</span></a></span>
-		<nav class="fdahead-nav">
-			<ul class="">
-				<li class="one"><a href="{% url 'browse_labels' %}">Drug Names</a> </li>
-				<li class="two"><a href="{% url 'browse_events' %}">Adverse Events</a> </li>
-				<li class="three"><a href="{% url 'browse_enforcements' %}">Enforcement Reports</a> </li>
-				<li class="four"><a href="{% url 'browse_manufacturers' %}">Drug Manufacturers</a> </li>
-			</ul>
-		</nav>
-
-        {% block searchbar %}
-            {% include 'core/searchbar.html' %}
-        {% endblock %}
-
-	</header>
+    <!-- header section -->
+    {% block header %}
+        {% include 'core/header.html' %}
+    {% endblock header %}
 
     <!-- javascript enabled message -->
     <noscript>
@@ -65,42 +50,29 @@
         </div>
     </noscript>
 
-    <!-- end nav/begin body -->
-  	<div class="content">
-    <main role="main">
+{# main content for each of the pages. fyi, homepage has significantly different layout.  #}
+    <!-- main content -->
+    {% block main %}
+    {% endblock main %}
 
-        {% block body %}
+    <div class="wrapper footer">
+        <div class="content">
+            <footer class="fdafoot">
+                <ul>
+                    <li><a href="{% url 'about' %}">About</a></li>
+                    <li><a href="{% url 'contact' %}">Contact Us</a></li>
+                    <li><a href="{% url 'accessibility' %}">Accessibility</a></li>
+                    <li><a href="{% url 'about' %}#licensing">Licensing Information</a></li>
+                </ul>
+                <p ><strong>Disclaimer: </strong>Data provided by the U.S. Food and Drug Administration
+                    (<a href="https://open.fda.gov">http://open.fda.gov</a>).
+                    The material on this website is provided for education only, and is not for clinical or medical use.
+                    This product is not intended to diagnose, treat, cure, or prevent any disease.</p>
 
-            <div class="row">
-                {% block text %}
-                {% endblock %}
-            </div>
-
-            <div class="row">
-                {% block details %}
-                {% endblock %}
-            </div>
-
-        {% endblock %}
-
-    </main>
+                <p>&copy; Copyright 2015 Artemis Consulting, Inc.</p>
+            </footer><!-- end footer -->
+        </div>
     </div>
-
-    <footer class="fdafoot">
-		<ul>
-            <li><a href="{% url 'about' %}">About</a></li>
-            <li><a href="{% url 'contact' %}">Contact Us</a></li>
-            <li><a href="{% url 'accessibility' %}">Accessibility</a></li>
-            <li><a href="{% url 'about' %}#licensing">Licensing Information</a></li>
-		</ul>
-        <p ><strong>Disclaimer: </strong>Data provided by the U.S. Food and Drug Administration
-            (<a href="https://open.fda.gov">http://open.fda.gov</a>).
-            The material on this website is provided for education only, and is not for clinical or medical use.
-            This product is not intended to diagnose, treat, cure, or prevent any disease.</p>
-
-        <p>&copy; Copyright 2015 Artemis Consulting, Inc.</p>
-	</footer><!-- end footer -->
-
     <script>
         {# django url variables for search bar #}
         var urlLabels = "{% url 'search_labels' %}";
@@ -114,9 +86,11 @@
     <script src="{% static "highcharts-4.1.6/highcharts.js" %}"></script>
     <script src="{% static "js/states.js" %}"></script>
     <script src="{% static "js/fda-scripts.js" %}"></script>
+    <script src="{% static "js/isotope.pkgd.js" %}"></script>
+    <script src="{% static "js/modernizr-1.5.min.js" %}"></script>
 
     {% block extra_js %}
     {% endblock %}
-</div>
+
 </body>
 </html>
