--- a/code/templates/core/contact.html
+++ b/code/templates/core/contact.html
@@ -1,46 +1,61 @@
 {% extends "core/base.html" %}
-
 {% load staticfiles %}
 
-{% block body %}
-    
-    <h1 class="page-title">Contact Us</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tempus, neque in suscipit elementum,
-        mi velit vestibulum nulla, eget malesuada urna justo at ex. Nullam gravida volutpat nisi, at ullamcorper
-        ante iaculis lacinia.</p>
-    {% if errors %}
-        <div class="box-error">
-            <h2>There was a problem with the form.</h2>
-            <ul>
-                {% if errors.contact_name %}
-                    <li><a href="#contact-name">Enter a valid name.</a></li>
-                {% endif %}
-                {% if errors.contact_email %}
-                    <li><a href="#contact-email">Enter a valid email address.</a></li>
-                {% endif %}
-                {% if errors.contact_comment %}
-                    <li><a href="#contact-comment">Enter a valid comment.</a></li>
-                {% endif %}
-            </ul>
-        </div>
-    {% endif %}
+{% block banner %}
+{% endblock %}
 
-    <form name="contact-form" action="{% url 'contact' %}" method="post" id="contact-form">
-        {% csrf_token %}
-        <p>
-            <label for="contact-name">Name</label><br />
-            <input type="text" class="width-60-percent" name="contact_name" id="contact-name" placeholder="Name" value="{{ formdata.contact_name }}" required="true" autofocus>
-        </p>
-        <p>
-            <label for="contact-email">Email</label><br />
-            <input type="email" class="width-60-percent" name="contact_email" id="contact-email" placeholder="Email" value="{{ formdata.contact_email }}" required="true">
-        </p>
-        <p>
-            <label for="contact-comment">Comment</label><br />
-            <textarea class="width-60-percent" rows="6" name="contact_comment" id="contact-comment" placeholder="Comment" required="true">{{ formdata.contact_comment }}</textarea>
-        </p>
-        <button type="submit" class="">Submit</button>
-    </form>
+{% block main %}
+<main>
+    <div class="wrapper page-header">
+        <div class="content">
+            <h1>Contact Us</h1>
+        </div>
+    </div>
+    <div class="wrapper body">
+        <div class="content">
+            <div class="TODO">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tempus, neque in suscipit elementum,
+                    mi velit vestibulum nulla, eget malesuada urna justo at ex. Nullam gravida volutpat nisi, at ullamcorper
+                    ante iaculis lacinia.</p>
+                {% if errors %}
+                    <div class="box-error">
+                        <h2>There was a problem with the form.</h2>
+                        <ul>
+                            {% if errors.contact_name %}
+                                <li><a href="#contact-name">Enter a valid name.</a></li>
+                            {% endif %}
+                            {% if errors.contact_email %}
+                                <li><a href="#contact-email">Enter a valid email address.</a></li>
+                            {% endif %}
+                            {% if errors.contact_comment %}
+                                <li><a href="#contact-comment">Enter a valid comment.</a></li>
+                            {% endif %}
+                        </ul>
+                    </div>
+                {% endif %}
+
+                <form name="contact-form" action="{% url 'contact' %}" method="post" id="contact-form">
+                    {% csrf_token %}
+                    <p>
+                        <label for="contact-name">Name</label><br />
+                        <input type="text" class="width-60-percent" name="contact_name" id="contact-name" placeholder="Name" value="{{ formdata.contact_name }}" required="true" autofocus>
+                    </p>
+                    <p>
+                        <label for="contact-email">Email</label><br />
+                        <input type="email" class="width-60-percent" name="contact_email" id="contact-email" placeholder="Email" value="{{ formdata.contact_email }}" required="true">
+                    </p>
+                    <p>
+                        <label for="contact-comment">Comment</label><br />
+                        <textarea class="width-60-percent" rows="6" name="contact_comment" id="contact-comment" placeholder="Comment" required="true">{{ formdata.contact_comment }}</textarea>
+                    </p>
+                    <button type="submit" class="">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</main>
+
+
 
 {% endblock %}
 
