--- a/code/templates/core/details_enforcement_reports.html
+++ b/code/templates/core/details_enforcement_reports.html
@@ -8,72 +8,72 @@
 <title>FDA Drug Monitor - Enforcement Report Details</title>
 {% endblock %}
 
-
-{% block searchbar %}
-    {% include 'core/searchbar.html' with search_category='enforcements'%}
+{% block header %}
+    {% include 'core/header.html' with search_header='enforcements'%}
 {% endblock %}
 
-{% block text %}
-    <h1 class="page-title">Enforcement Report Details
-        <br/>
-        <small>Information for <strong>{{ q|replace_plus_signs }}</strong></small>
-    </h1>
-    <p class="page-description">
-    The FDA Drug Monitor enforcement reports are based on data from the
-        <a href="https://open.fda.gov/data/res/" target="_blank">FDA Recall Enterprise System (RES)</a>. The
-    data cover records from 2004 - present, and are updated weekly.
-    </p>
-{% endblock %}
+{% block main %}
+<main>
+	<div class="wrapper page-header fda-enforcement-reports">
+		<div class="content">
+			<h1>Enforcement Report Details: Information for {{ q|replace_plus_signs }}</h1>
+            <p>The FDA Drug Monitor enforcement reports are based on data from the
+            <a href="https://open.fda.gov/data/res/" target="_blank">FDA Recall Enterprise System (RES)</a>. The
+            data cover records from 2004 - present, and are updated weekly.</p>
+		</div>
+	</div>
+	<div class="wrapper body">
+		<div class="content">
+          <!-- Nav tabs -->
+            <div id="fda-tabs-interface" class="fda-tabs-interface">
+                <ul>
+                    <li><a href="#details">Details</a></li>
+                    <li><a href="#drugs">Drugs with enforcement reports in state</a></li>
+                </ul>
+                <!-- tab 1 -->
+                <div id="details">
+                    {% include 'core/pagination.html' with result_list=enforcements result_paginator=enforcements_paginator %}
 
-{% block details %}
-  <!-- Nav tabs -->
-    <div id="fda-tabs-interface" class="fda-tabs-interface">
-        <ul>
-            <li><a href="#details">Details</a></li>
-            <li><a href="#drugs">Drugs with enforcement reports in state</a></li>
-        </ul>
-        <!-- tab 1 -->
-        <div id="details">
-            {% include 'core/pagination.html' with result_list=enforcements result_paginator=enforcements_paginator %}
+                    <div class="fda-accordion-interface">
+                        <!-- accordion panel groups -->
+                        {% include 'core/tab_enforcements.html' with prefix='enforcements' %}
+                    </div>
+                </div><!-- end tab 1 -->
 
-            <div class="fda-accordion-interface">
-                <!-- accordion panel groups -->
-                {% include 'core/tab_enforcements.html' with prefix='enforcements' %}
-            </div>
-        </div><!-- end tab 1 -->
+                <!-- tab 2 -->
+                <div id="drugs">
+                    <p>Click the chart below to visit the drug detail page or view data in
+                        <a id="detail-table-trigger" href="#">table format</a>.</p>
 
-        <!-- tab 2 -->
-        <div id="drugs">
-            <p>Click the chart below to visit the drug detail page or view data in
-                <a id="detail-table-trigger" href="#">table format</a>.</p>
-
-                <div id="detailTable" style="display:none;">
-                    <table class="fda-table-default">
-                        <caption>
-                            Drugs with Enforcement Reports in {{ q }}
-                        </caption>
-                        <thead>
-                            <th>Drug Name</th>
-                            <th>Count</th>
-                        </thead>
-                        <tbody>
-                            {% for result in drugs_count %}
-                            <tr>
-                                <td>
-                                    <a href="{% url 'search_labels' %}?q={{ result.term|replace_spaces|urlencode }}">
-                                        {{ result.term|lower|capfirst }}
-                                    </a>
-                                </td>
-                                <td><span class="count">{{ result.count|intcomma }}</span></td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-                <div id="enforcementChart"></div><br/>
-        </div><!-- end tab 2 -->
-    </div><!-- end panel -->
-
+                        <div id="detailTable" style="display:none;">
+                            <table class="fda-table-default">
+                                <caption>
+                                    Drugs with Enforcement Reports in {{ q }}
+                                </caption>
+                                <thead>
+                                    <th>Drug Name</th>
+                                    <th>Count</th>
+                                </thead>
+                                <tbody>
+                                    {% for result in drugs_count %}
+                                    <tr>
+                                        <td>
+                                            <a href="{% url 'search_labels' %}?q={{ result.term|replace_spaces|urlencode }}">
+                                                {{ result.term|lower|capfirst }}
+                                            </a>
+                                        </td>
+                                        <td><span class="count">{{ result.count|intcomma }}</span></td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                        <div id="enforcementChart"></div><br/>
+                </div><!-- end tab 2 -->
+            </div><!-- end nav tabs -->
+		</div><!-- end content -->
+	</div><!-- end wrapper -->
+</main>
 {% endblock %}
 
 {% block extra_js %}
