--- a/code/templates/core/landing_enforcement_reports.html
+++ b/code/templates/core/landing_enforcement_reports.html
@@ -8,30 +8,34 @@
 <title>FDA Drug Monitor - Enforcement Reports</title>
 {% endblock %}
 
-{% block searchbar %}
-    {% include 'core/searchbar.html' with search_category='enforcements'%}
-{% endblock %}
+{% block header %}
+    {% include 'core/header.html' with search_header='enforcements'%}
+{% endblock header %}
 
-{% block text %}
-    <h1 class="page-title">Enforcement Reports</h1>
-    <p class="page-description">Select a state from the map below or enter a state into the search above
-        to view current related information.  Click to view state data in
-        <a href="#" id="state-list-trigger">table format</a>.</p>
-{% endblock %}
+{% block main %}
+<main>
+	<div class="wrapper page-header fda-enforcement-reports">
+		<div class="content">
+            <h1 class="margin-bottom-quad">Enforcement Reports</h1>
+            <p>Select a state from the map below or enter a state into the search above
+                to view current related information.  Click to view state data in
+                <a href="#" id="state-list-trigger">table format</a>.</p>
+	    </div>
+	</div>
 
-{% block details %}
-    <div id="stateList" style="display:none;">
-        <!-- browse list -->
-        {% include 'core/browse.html' with search_url='search_enforcements' show_count=True %}
+    <div class="wrapper body">
+		<div class="content">
+            <div id="stateList" style="display:none;">
+                <!-- browse list -->
+                {% include 'core/browse.html' with search_url='search_enforcements' show_count=True %}
+            </div>
+
+            <!-- highcharts map -->
+            <div id="map" style="height:700px; min-width:310px; max-width:100%; margin:0 auto"></div>
+
+        </div>
     </div>
-
-    <!-- highcharts map -->
-    <div class="row">
-        <!-- highcharts map -->
-        <div id="map" style="height:800px; min-width:310px; max-width:100%; margin:0 auto"></div>
-    </div>
-
-
+</main>
 {% endblock %}
 
 {% block extra_js %}
