--- a/code/templates/core/landing_manufacturers.html
+++ b/code/templates/core/landing_manufacturers.html
@@ -8,18 +8,25 @@
 <title>FDA Drug Monitor - Manufacturers</title>
 {% endblock %}
 
-{% block searchbar %}
-    {% include 'core/searchbar.html' with search_category='manufacturers'%}
-{% endblock %}
+{% block header %}
+    {% include 'core/header.html' with search_header='manufacturers'%}
+{% endblock header %}
 
-{% block text %}
-    <h1 class="page-title">Drug Manufacturers</h1>
-    <p class="page-description">Select a manufacturer from the list below or enter a manufacturer name into the search above
-        to view current related information.  Only the top 100 manufacturers are shown here.</p>
+{% block main %}
+<main>
+	<div class="wrapper page-header fda-drug-manufacturers">
+		<div class="content">
+            <h1 class="margin-bottom-quad">Drug Manufacturers</h1>
+            <p>Select a manufacturer from the list below or enter a manufacturer name into the search above
+            to view current related information.  Only the top 100 manufacturers are shown here.</p>
+	    </div>
+	</div>
 
-{% endblock %}
-
-{% block details %}
-    <!-- browse list -->
-    {% include 'core/browse.html' with search_url='search_manufacturers' show_count=False %}
+    <div class="wrapper body">
+		<div class="content">
+            <!-- browse list -->
+            {% include 'core/browse.html' with search_url='search_manufacturers' show_count=True%}
+        </div>
+    </div>
+</main>
 {% endblock %}
