update to logo href

--- a/code/templates/core/header.html
+++ b/code/templates/core/header.html
@@ -4,7 +4,7 @@
 	<div class="wrapper header">
 		<div class="content header">
 			<button class="fdahead-nav-toggle"><span>show navigation</span></button>
-			<span class="fdahead-logo"><a href="/">
+			<span class="fdahead-logo"><a href="{% url 'homepage' %}">
                 <img title="Official FDA Logo" width="92" height="38" alt="logo" src="{% static "images/fda-logo.png" %}">
                 <span>Drug Monitor</span></a></span>
 
