update toggle text on hyperlinks

--- a/code/templates/core/details_adverse_events.html
+++ b/code/templates/core/details_adverse_events.html
@@ -194,6 +194,12 @@
 
     $('#adverse-table-trigger').click(function() {
        $('#adverseTable').toggle();
+         if ($('#adverseTable').css('display') =='none') {
+            $('#adverse-table-trigger').text('table format');
+        }
+        else {
+            $('#adverse-table-trigger').text('chart format');
+        }
        return false;
     });
 
