--- a/code/templates/core/landing_enforcement_reports.html
+++ b/code/templates/core/landing_enforcement_reports.html
@@ -172,6 +172,13 @@
 
     $('#state-list-trigger').click(function() {
        $('#stateList').toggle();
+         if ($('#stateList').css('display') =='none') {
+            $('#state-list-trigger').text('table format');
+        }
+        else {
+            $('#state-list-trigger').text('map format');
+        }
+
        return false;
     });
 
