--- a/code/core/static/css/fda/_tabs.less
+++ b/code/core/static/css/fda/_tabs.less
@@ -1,9 +1,9 @@
 .fda-tabs-interface {
-  padding-top: 10px;
+  //padding-top: 10px;
    ul {
     .plain;
     .inline;
-    padding-top: 15px;
+    //padding-top: 15px;
     border-bottom: 1px solid @gray;
     li {
       padding: 0 25px 0 0;
