--- a/code/templates/core/homepage.html
+++ b/code/templates/core/homepage.html
@@ -4,7 +4,7 @@
 
 
 {% block main %}
-    <div class="wrapper body">
+    <div class="wrapper banner">
         <div class="homepage-banner-temp">
             <img class="scalable-image" src="{% static "images/pic01.jpg" %}">
             <div class="text-wrapper">
