--- a/code/core/static/css/_footer.less
+++ b/code/core/static/css/_footer.less
@@ -1,4 +1,4 @@
-.fdafoot {
+/*.fdafoot {
    clear:both;
    padding: 20px @gutter 0;
    position:relative;
@@ -8,5 +8,29 @@
      margin-bottom: 10px;
      border-top: 5px solid @gray;
      padding: 20px 0 0;
+   };
+};*/
+
+.wrapper {
+  &.footer {
+    background-color: @lighter_gray;
+  };
+};
+.content {
+  &.footer {
+    background-color: @transparent;
+  };
+};
+.fdafoot {
+   clear:both;
+   position:relative;
+   color: @dark_gray;
+   ul {
+     .plain;
+     .inline;
+     padding: 20px 0 0;
+     a {
+       color: @link_color;
+     };
    };
 };
