--- a/code/core/static/css/fda/base/_layouts.less
+++ b/code/core/static/css/fda/base/_layouts.less
@@ -18,6 +18,10 @@
 .wrapper {
   width:100%;
   clear:both;
+  &.banner {
+    background-color: @white;
+    margin: 0;
+  };
   &.body {
     background-color: @white;
     margin: 0;
