Path changed from LESS file to CSS file

--- a/code/templates/core/base.html
+++ b/code/templates/core/base.html
@@ -15,7 +15,7 @@
     {% endblock %}
 
     <!--link href="{% static "js/jquery-ui.css" %}" rel="stylesheet"-->
-    <!-- if (development) -->
+    <!-- if (development)
     <link href="{% static "css/style-fda.less" %}" type='text/css' rel="stylesheet/less"/>
     <script type="text/javascript">
         less = {
@@ -24,11 +24,9 @@
             strictMath: false
         };
     </script>
-    <script src="{% static "js/less-1.4.2.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/less-1.4.2.js" %}" type="text/javascript"></script> -->
 
-    <!-- else -->
-    <!-- <link href="{% static "css/style.css" %}" type='text/css' rel="stylesheet"/> -->
-    <!-- endif -->
+    <!--  --><link href="{% static "css/style-fda.css" %}" type='text/css' rel="stylesheet"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
