minor changes to text

--- a/code/templates/core/landing_enforcement_reports.html
+++ b/code/templates/core/landing_enforcement_reports.html
@@ -20,6 +20,8 @@
             <p>Select a state from the map below or enter a state into the search above
                 to view current related information.  Click to view state data in
                 <a href="#" id="state-list-trigger">table format</a>.</p>
+
+            <p>Search by Drug Names to find all enforcement reports for a given drug.</p>
 	    </div>
 	</div>
 
