change to reload current tab on page change

--- a/code/templates/core/details_enforcement_reports.html
+++ b/code/templates/core/details_enforcement_reports.html
@@ -32,7 +32,7 @@
                 </ul>
                 <!-- tab 1 -->
                 <div id="details">
-                    {% include 'core/pagination.html' with result_list=enforcements result_paginator=enforcements_paginator %}
+                    {% include 'core/pagination.html' with tab_name='enforcements' result_list=enforcements result_paginator=enforcements_paginator %}
 
                     <div class="fda-accordion-interface">
                         <!-- accordion panel groups -->
