--- a/code/templates/core/details_manufacturers.html
+++ b/code/templates/core/details_manufacturers.html
@@ -34,7 +34,7 @@
 
                 <!-- tab 1 -->
                 <div id="labels">
-                    {% include 'core/pagination.html' with result_list=labels result_paginator=labels_paginator %}
+                    {% include 'core/pagination.html' with tab_name='labels' result_list=labels result_paginator=labels_paginator %}
 
                     <div class="fda-accordion-interface">
                         <!-- accordion panel groups -->
@@ -44,7 +44,7 @@
 
                 <!-- tab 2 -->
                 <div id="events">
-                    {% include 'core/pagination.html' with result_list=events result_paginator=events_paginator %}
+                    {% include 'core/pagination.html' with tab_name='events' result_list=events result_paginator=events_paginator %}
 
                     <div class="fda-accordion-interface">
                         <!-- accordion panel groups -->
@@ -54,7 +54,7 @@
 
                 <!-- tab 3 -->
                 <div id="enforcements">
-                    {% include 'core/pagination.html' with result_list=enforcements result_paginator=enforcements_paginator %}
+                    {% include 'core/pagination.html' with tab_name='enforcements' result_list=enforcements result_paginator=enforcements_paginator %}
 
                     <div class="fda-accordion-interface">
                         <!-- accordion panel groups -->
@@ -65,4 +65,21 @@
         </div><!-- end content -->
 	</div><!-- end wrapper -->
 </main>
+{% endblock %}
+
+{% block extra_js %}
+    <script>
+    $(document).ready(function() {
+        var tab_number;
+        {% if tab == 'events' %}
+            tab_number = 1;
+        {% elif tab == 'enforcements' %}
+            tab_number = 2;
+        {% else %}
+            tab_number = 0;
+        {% endif %}
+
+        $("#fda-tabs-interface").tabs("option", "active", tab_number);
+    });
+    </script>
 {% endblock %}
