--- a/code/templates/core/details_adverse_events.html
+++ b/code/templates/core/details_adverse_events.html
@@ -29,7 +29,7 @@
                 </ul>
                 <!-- tab 1 -->
                 <div id="details">
-                    {% include 'core/pagination.html' with result_list=events result_paginator=events_paginator %}
+                    {% include 'core/pagination.html' with tab_name='events' result_list=events result_paginator=events_paginator %}
 
                     <div class="fda-accordion-interface">
                         <!-- accordion panel groups -->
